 * Fix: Add a border around the userbar menu in Windows high-contrast mode so it can be identified (Albina Starykova)
 * Fix: Make sure browser font resizing applies to the userbar (Albina Starykova)
 * Fix: Fix check for `delete_url_name` attribute in generic `DeleteView` (Alex Simpson)
 * Fix: Re-implement design system colors so HSL values exactly match the desired RGB (Albina Starykova)
 * Docs: Add custom permissions section to permissions documentation page (Dan Hayden)
 * Docs: Add documentation for how to get started with contributing translations for the Wagtail admin (Ogunbanjo Oluwadamilare)
 * Docs: Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
 * Docs: Mention the importance of passing `request` and `current_site` to `get_url` on the performance documentation page (Jake Howard)
 * Docs: Add documentation for `register_user_listing_buttons` hook (LB (Ben Johnston))
 * Docs: Add development (contributing to Wagtail) documentation notes for development on Windows (Akua Dokua Asiedu)
 * Docs: Mention Wagtail’s usage of Django’s default user model by default (Temidayo Azeez)
 * Docs: Add links to treebeard documentation for relevant methods (Temidayo Azeez)
 * Docs: Add clarification on where to register entity plugins (Mark McOsker)
 * Docs: Fix logo in README not being visible in high-contrast mode (Benita Anawonah)
 * Docs: Improve 'first wagtail site' tutorial (Akua Dokua Asiedu)
 * Docs: Grammatical adjustments of `page models` usage guide (Damilola Oladele)
 * Docs: Add class inheritance information to StreamField block sreference (Temidayo Azeez)
 * Docs: Document the hook `register_image_operations` and add an example of a custom Image filter (Coen van der Kamp)
 * Docs: Fix incorrect example code for StreamField migration of `RichTextField` (Matt Westcott)
 * Docs: Document the policy needed to create invalidations in CloudFront (Jake Howard)