@@ -81,6 +81,7 @@ This feature was developed by Jake Howard.
  * Make sure browser font resizing applies to the userbar (Albina Starykova)
  * Fix check for `delete_url_name` attribute in generic `DeleteView` (Alex Simpson)
  * Re-implement design system colors so HSL values exactly match the desired RGB (Albina Starykova)
+ * Resolve issue where workflow and other notification emails would not include the correct tab URL for account notification management (LB (Ben) Johnston)
 
 ### Documentation
 
