@@ -119,7 +119,7 @@
 
                                         <div style="font-size: 10px; margin-top: 20px;">
                                             {% block preferences %}
-                                                {% trans "Edit your notification preferences here:" %} <a href="{{ base_url }}{% url 'wagtailadmin_account' %}#notifications">{{ base_url }}{% url 'wagtailadmin_account' %}#notifications</a>
+                                                {% trans "Edit your notification preferences here:" %} <a href="{{ base_url }}{% url 'wagtailadmin_account' %}#tab-notifications">{{ base_url }}{% url 'wagtailadmin_account' %}#tab-notifications</a>
                                             {% endblock %}
                                         </div>
                                     </td>
