@@ -57,6 +57,7 @@ Changelog
  * Fix: Make sure browser font resizing applies to the userbar (Albina Starykova)
  * Fix: Fix check for `delete_url_name` attribute in generic `DeleteView` (Alex Simpson)
  * Fix: Re-implement design system colors so HSL values exactly match the desired RGB (Albina Starykova)
+ * Fix: Resolve issue where workflow and other notification emails would not include the correct tab URL for account notification management (LB (Ben) Johnston)
  * Docs: Add custom permissions section to permissions documentation page (Dan Hayden)
  * Docs: Add documentation for how to get started with contributing translations for the Wagtail admin (Ogunbanjo Oluwadamilare)
  * Docs: Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
